--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
-    <title>Guiminamflix</title>
+    <title>Rozanteflix</title>
 </head>
 
 <body>
-    <header>GUIMINAMFLIX</header>
+    <header>ROZANTEFLIX</header>
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>ATRAVÉS DO ARANHAVERSO</h1>
-            <p>#homem-aranha</p>
+            <h1>A FREIRA</h1>
+            <p>#uma história de horror</p>
         </div>
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=EEv-tsY_b1B2OwKE"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/mD7a_dN5Gks?si=ldl0LkAbEe6BVfZz" 
+                title="YouTube video player" frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
@@ -30,20 +30,20 @@
     <section class="categoria">
         <h2>Filmes e séries</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
-                <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
+            <a href="https://youtu.be/SUDfiIMWtxE?si=fnaLWVVgPucn8Wuf">
+                <img src="https://img.youtube.com/vi/SUDfiIMWtxE/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
-                <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
+            <a href="https://youtu.be/siKHTlIml5Q?si=geaW-pgoormE2ppp">
+                <img src="https://img.youtube.com/vi/siKHTlIml5Q/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
-                <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
+            <a href="https://youtu.be/fAPEJQOHUv8?si=W5aWnQb5krgpuYCy">
+                <img src="https://img.youtube.com/vi/fAPEJQOHUv8/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
-                <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
+            <a href="https://youtu.be/eCI4d6TfPtc?si=YzvTI_53pBq5MGO1">
+                <img src="https://img.youtube.com/vi/eCI4d6TfPtc/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
-                <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
+            <a href="https://youtu.be/2bJdqDFZ9JQ?si=VFyJcTmtks5nHCIe">
+                <img src="https://img.youtube.com/vi/2bJdqDFZ9JQ/maxresdefault.jpg" />
             </a>
         </div>
     </section>
